@@ -21,4 +21,42 @@ MOD_LATEST_FIELD_VALUE_ORDERING_ADDED="Recently Added First"
 MOD_LATEST_FIELD_VALUE_ORDERING_MODIFIED="Recently Modified First"
 MOD_LATEST_LATEST_ITEMS="Latest Items"
 MOD_LATEST_NO_MATCHING_RESULTS="No Matching Results"
+MOD_LATEST_TITLE="Recently Created Articles"
+MOD_LATEST_TITLE_CREATED="Last Added Articles"
+MOD_LATEST_TITLE_CREATED_1="Last Added Article"
+MOD_LATEST_TITLE_CREATED_MORE="Last %1$s Added Articles"
+MOD_LATEST_TITLE_CREATED_NOT_ME="Last Added Articles Not By Me"
+MOD_LATEST_TITLE_CREATED_NOT_ME_1="Last Added Article Not By Me"
+MOD_LATEST_TITLE_CREATED_NOT_ME_MORE="Last %1$s Added Articles Not By Me"
+MOD_LATEST_TITLE_CREATED_BY_ME="Last Added Articles By Me"
+MOD_LATEST_TITLE_CREATED_BY_ME_1="Last Added Article By Me"
+MOD_LATEST_TITLE_CREATED_BY_ME_MORE="Last %1$s Added Articles By Me"
+MOD_LATEST_TITLE_CREATED_CATEGORY="Last Added Articles (<u>%2$s</u> category)"
+MOD_LATEST_TITLE_CREATED_CATEGORY_1="Last Added Article (<u>%2$s</u> category)"
+MOD_LATEST_TITLE_CREATED_CATEGORY_MORE="Last %1$s Added Articles (<u>%2$s</u> category)"
+MOD_LATEST_TITLE_CREATED_CATEGORY_BY_ME="Last Added Articles By Me (%2$s category)"
+MOD_LATEST_TITLE_CREATED_CATEGORY_BY_ME_1="Last Added Article By Me (%2$s category)"
+MOD_LATEST_TITLE_CREATED_CATEGORY_BY_ME_MORE="Last %1$s Added Articles By Me (%2$s category)"
+MOD_LATEST_TITLE_CREATED_CATEGORY_NOT_ME="Last Added Articles Not By Me (%2$s category)"
+MOD_LATEST_TITLE_CREATED_CATEGORY_NOT_ME_1="Last Added Article Not By Me (%2$s category)"
+MOD_LATEST_TITLE_CREATED_CATEGORY_NOT_ME_MORE="Last %1$s Added Articles Not By Me (%2$s category)"
+MOD_LATEST_TITLE_MODIFIED="Last Modified Articles"
+MOD_LATEST_TITLE_MODIFIED_1="Last Modified Article"
+MOD_LATEST_TITLE_MODIFIED_MORE="Last %1$s Modified Articles"
+MOD_LATEST_TITLE_MODIFIED_BY_ME="Last Modified Articles By Me"
+MOD_LATEST_TITLE_MODIFIED_BY_ME_1="Last Modified Article By Me"
+MOD_LATEST_TITLE_MODIFIED_BY_ME_MORE="Last %1$s Modified Articles By Me"
+MOD_LATEST_TITLE_MODIFIED_NOT_ME="Last Modified Articles Not By Me"
+MOD_LATEST_TITLE_MODIFIED_NOT_ME_1="Last Modified Article Not By Me"
+MOD_LATEST_TITLE_MODIFIED_NOT_ME_MORE="Last %1$s Modified Articles Not By Me"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY="Last Modified Articles (<u>%2$s</u> category)"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY_1="Last Modified Article (<u>%2$s</u> category)"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY_MORE="Last %1$s Modified Articles (<u>%2$s</u> category)"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY_BY_ME="Last Modified Articles By Me (%2$s category)"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY_BY_ME_1="Last Modified Article By Me (%2$s category)"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY_BY_ME_MORE="Last %1$s Modified Articles By Me (%2$s category)"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY_NOT_ME="Last Modified Articles Not By Me (%2$s category)"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY_NOT_ME_1="Last Modified Article Not By Me (%2$s category)"
+MOD_LATEST_TITLE_MODIFIED_CATEGORY_NOT_ME_MORE="Last %1$s Modified Articles Not By Me (%2$s category)"
+MOD_LATEST_UNEXISTING="<i>Unexisting</i>"
 MOD_LATEST_XML_DESCRIPTION="This Module shows a list of the most recently published Articles that are still current. Some that are shown may have expired even though they are the most recent."
